Add stats endpoint
